# FiTx

./: .gitignore  .gitmodules  Dockerfile  build.sh  build_docker.sh  build_local.sh  docker-compose.yml  run_docker.sh  run_test.sh  run_test_local.sh
pp/: .gitignore  CMakeLists.txt  build.sh  run_driver_ir.sh  run_test.sh
pp/header/: LoweredRenderer.h  PcLowerPluginAction.h
pp/src/: PPCapture.cpp  PcLwoerPluginAction.cpp  ir_summary.cpp
pp/test/: example7_macro_fn.c  example9_multi_fn.c
preproc/: .gitignore  CMakeLists.txt  DEPENDENCIES.md  README.md  build.sh  run_test.sh
preproc/header/: DirEnum.h  PPCapture.h  PcLowerPluginAction.h
preproc/src/: PPCapture.cpp  PcLwoerPluginAction.cpp  emit_ir.cpp  pc_propagation_clang.cpp  symbolic_lowering_clang.cpp
preproc/test/: example1_alloc_free.c  example2_branch.c  example3_struct.c  example4_function.c  example5_macro.c  example6_multi_main.c
scripts/: 00_extr_candidates.sh  01_count_driver_cases.py  02_count_driver_ir.py  03_driver_ir_success_rate.py  04_list_candidate_devices.py  05_superc_preprocess.sh  06_check_annotator.sh  README.md  analyze.py
scripts/FiTx/: utils.py
src/: CMakeLists.txt
src/framework/core/: Utils.cpp  Value.cpp
src/framework/frontend/: Analyzer.cpp  BasicBlock.cpp  Framework.cpp  Function.cpp  State.cpp  StateTransition.cpp
src/framework/include/core/: Utils.hpp
src/framework/include/framework_ir/: IRGenerator.hpp
src/framework/include/frontend/: Analyzer.hpp  BasicBlock.hpp  Framework.hpp  Function.hpp  PropagationConstraint.hpp  State.hpp  StateTransition.hpp  Utils.hpp
src/ppAnnotator/: CMakeLists.txt  run_test.sh
src/ppAnnotator/include/: Annotator.hpp
src/ppAnnotator/src/: Annotator.cpp
src/ppAnnotator/test/: ex1_inactive.c.bak  ex1_inactive.h
src/ppLower/: CMakeLists.txt  README.md  run_driver_ir.sh  run_lower.sh  run_test.sh
src/ppLower/header/: DirEnum.h  PPCapture.h  PcLowerPluginAction.h
src/ppLower/scripts/: compile_db_filter.py  kbuild_cmd_extract.py
src/ppLower/src/: LoweredRenderer.cpp  PcLowerPluginAction.cpp
src/ppLower/test/: example6_multi.h  example6_multi_lib.c  example8_nested_macro.c
tests/double_free/src/: intra_nulled_df_macro.c  intra_simple_df_macro.c
